# CG_cgl

./: Actor.cpp  Actor.h  CGEMesh.cpp  CGEMesh.h  CMakeLists.txt  Light.cpp  Light.h  StaticMesh.cpp  StaticMesh.h  main.cpp
Actor/: Actor.cpp  Actor.h  Light.cpp  Light.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  SkyBox.cpp  SkyBox.h
Actor/geometry/: Plane.h  box.h  plane.cpp
Shaders/: DirectionLight.frag  FlashLight.frag  FragmentShader.frag  FragmentShader2.frag  MeshVertexSharder.glsl  MultiLight.frag  PBRFragment.frag  PBRVertex.vert  PointLight.frag  SkyBoxFragment.frag  SkyBoxVertexShader.glsl  VertexShader.glsl
model/moulder_hand_sickle/: mhs.blend  mhs.fbx  mhs.mtl  moulder_hand_stickle.FBX
model/tree/: tree.mtl
public/include/Eigen/src/Core/: GenericPacketMath.h
public/include/Eigen/src/Core/functors/: UnaryFunctors.h
public/include/Eigen/src/Geometry/: AngleAxis.h  Quaternion.h  Rotation2D.h
public/include/Eigen/src/Jacobi/: Jacobi.h
public/include/Eigen/src/plugins/: ArrayCwiseUnaryOps.h  MatrixCwiseUnaryOps.h
public/include/assimp/: revision.h
public/include/glad/: glad.h
public/lib/debug_x64/: glfw3.lib  glfw3dll.exp
public/lib/release_x64/: glfw3.lib  glfw3dll.exp
public/src/: glad.c
utility/: Camera.cpp  Camera.h  ImageLoader.h  InputHandler.cpp  InputHandler.h  Shader.cpp  Shader.h  Timer.cpp  Timer.h  TransMatrix.h  stb_image.cpp
